apps/workloads/media/qbittorrent/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-ui
spec:
  selector:
    app: qbittorrent
  ports:
    - name: web-ui
      port: 8080
      targetPort: 8080
      protocol: TCP
