apps/workloads/media/qbittorrent/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: qbittorrent-ui-route
  namespace: media
spec:
  parentRefs:
    - name: internal-gateway
      namespace: traefik
  hostnames:
    - "download.kerrlab.app"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: qbittorrent-ui
          port: 8080
      filters:
        - type: ExtensionRef
          extensionRef:
            group: "traefik.io"
            kind: "Middleware"
            name: "authelia-forward-auth"
