apps/workloads/media/qbittorrent/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: qbittorrent-policy
spec:
  endpointSelector:
    matchLabels:
      app: qbittorrent
  # ----=== Ingress ===----
  ingress:
    # === Allow health checks from the host ===
    - fromEntities:
        - "host"
      toPorts:
        - ports:
            - port: web-ui
              protocol: "TCP"
    # === Allow access from other apps ===
    - fromEndpoints:
        - matchLabels:
            app: sonarr
        - matchLabels:
            app: radarr
        - matchLabels:
            app: prowlarr
        - matchLabels:
            app: autobrr
        - matchLabels:
            app: home-assistant
            k8s:io.kubernetes.pod.namespace: iot
        - matchLabels:
            app.kubernetes.io/name: n8n
            k8s:io.kubernetes.pod.namespace: automation
        - matchLabels:
            app.kubernetes.io/name: media-webhook-notifier
            k8s:io.kubernetes.pod.namespace: automation
      toPorts:
        - ports:
            - port: "web-ui"
              protocol: "TCP"

  # ----=== Egress ===----
  egress:
    # === Allow access to the world for torrenting ===
    - toEntities:
        - "world"
    # === Allow access to ntfy ===
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: automation
            app.kubernetes.io/name: ntfy
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
    # === Allow access to n8n ===
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: automation
            app.kubernetes.io/name: n8n
      toPorts:
        - ports:
            - port: "5678"
              protocol: TCP
